# vcurses

./: CMakeLists.txt  LICENSE  Makefile  README.md  vcurses.md  vcursesdoc.md
.github/workflows/: ci.yml
demos/: attr_demo.c  clear_demo.c  color_demo.c  input_demo.c  resize_demo.c  window_demo.c
docs/man/: curs_set.3  getch.3  initscr.3
examples/: resize_windows.c
include/: curses.h  panel.h  vcurses.h
src/: color.c  copywin.c  curses.c  init.c  input.c  keyname.c  mouse.c  napms.c  pad.c  panel.c  resize.c  screen.c  term_modes.c  vcurses.c  window.c  windows.c
tests/: attr.c  clear.c  color.c  copy.c  echochar.c  erase.c  has_key.c  input.c  macros.c  pad.c  scroll.c  term_modes.c  test_windows.c  touch.c  winch.c
